  * debian/libnx-xinerama1.*: move Xinerama dir back to nx-x11-common. Only
    delete known files. Fixes RPM build failures.
    Backported from Arctica GH 3.6.x branch.
  * nx-libs.spec: actually create libXinerama.so.1 symlink during build phase.
    Backported from Arctica GH 3.6.x branch.
  * debian/control: workaround missing dependencies of nxagent on Ubuntu for
    now.

  [ Bernard Cafarelli ]
  * nx-X11: link to libdl to fix undefined references to 'dlopen' and 'dlsym'.
    Fixes: #853.
    v2: generally link to libdl in all of nx-X11. (Mike Gabriel)
    Adds:
    - 0630_nx-X11_fix-underlinking-dlopen-dlsym.full.patch

  [ Mike Gabriel ]
  * Security fixes:
    - X.Org CVE-2013-7439:
      1200-CVE-2013-7439-MakeBigReq-don-t-move-the-last-wo.full.patch
  * nx-X11: Prevent underlinking by linking to libNX_X{11,damage,fixes).
    Adds:
    - 0640_nx-X11_fix-underlinking-libNX_Xcomposite_damage_fixes.full.patch
  * nxcompshad: Prevent underlinking by linking to libNX_Xext.
    Adds:
    - 0650_nxcompshad_link-to-NX_Xext.full.patch
  * Security fixes:
    - X.Org CVE-2015-3418:
      1210-CVE-2015-3418-dix-Allow-zero-height-PutImage-re.full.patch

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 17 Mar 2015 19:19:32 +0100

nx-libs (2:3.5.0.31-0x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * Use path discovery for finding makedepend. Remove old cruft. Adds:
    - 0070_nxcomp_use-MAKEDEPEND-in-path.full+lite.patch
    - 0071_nxcompext_use-MAKEDEPEND-in-path.full+lite.patch
    - 0072_nxcompshad_use-MAKEDEPEND-in-path.full+lite.patch
    - 0073_nxproxy_use-MAKEDEPEND-in-path.full+lite.patch
  * Fix dynamic library linking on OS X. Use -dynamiclib instead of -bundle.
    Adds:
    - 0074_nxcomp_use-dynamiclib-flag-on-OS-X.full+lite.patch
    - 0075_nxcompshad_use-dynamiclib-flag-on-OS-X.full+lite.patch
  * Use the correct library naming scheme on OS X. It differs from other
    UNIX-based systems.
    Adds: